# ska-low-cbf-fw-corr

./: .gitlab-ci.yml  .gitmodules  .release  CHANGELOG.md  CODEOWNERS  LICENSE  Makefile  README.md  RunMe.sh  RunMe_ct2_tb.sh  RunMe_v80.sh  create_tb.sh  create_v80.sh  create_v80_ct1_tb.sh  create_v80_ct2_tb.sh  gather_v80.sh  pyproject.toml  run_v80.sh
designs/correlator/: README.txt  correlator.fpga.yaml  correlator.peripheral.yaml  create_project.tcl  create_project_ct2_tb.tcl  create_project_notimeslave.tcl  create_project_u55.tcl  create_project_v80.tcl  create_v80_design.tcl  ct2_tb_behav.wcfg  hdllib.cfg
designs/correlator_v80/: README.txt  correlator_v80.fpga.yaml  correlator_v80.peripheral.yaml  create_project.tcl  create_project_v80.tcl  create_tb_axi512_to_256.tcl  create_v80_ct1_tb.tcl  create_v80_ct2_tb.tcl  create_v80_design.tcl  hdllib.cfg
docs/: Makefile  requirements.txt
docs/src/: ci.rst  conf.py  cor_firmware.rst  index.rst
libraries/signalProcessing/DRP/: DRP.peripheral.yaml
libraries/signalProcessing/LFAADecode100G/: LFAADecode100G.peripheral.yaml
libraries/signalProcessing/Packetiser100G/: Packetiser.peripheral.yaml
libraries/signalProcessing/cornerturn1/: cor_readout_32bit.vhd  corr_ct1.peripheral.yaml  (+33 more)
libraries/technology/: technology_pkg.vhd
raw/ska-low-cbf-fw-corr-u55c/: .gitkeep
sim/: riviera.tcl  xsim.tcl
tools/: hdltool_alveo  prog_pst.sh  prog_trafgen.sh  setup_prog.sh
tools/DAC_Cable_Test/: packet_spam.py  reset.sh  runme_20DACs_test.sh
tools/args/: gen_bus.py  gen_c_config.py  gen_slave.py  gen_tb_config.py
(+241 files in other folders)
